--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Интерактивная web-карта отображения доступа пользователей к магазинам Ecwid в реальном времени
-===
+                             === Интерактивная web-карта ===
+         отображения доступа пользователей к магазинам Ecwid в реальном времени
 
 Состоит из:
 1. java-демона (вычитывает обновления из лога, парсит их и резолвит ip-адреса в геокоординаты)
@@ -10,27 +10,56 @@
 1. oracle java1.6+
 2. jetty7+
 3. jsvc1.0+ для демона
-4. zip (для конфигурации сервлета в war)
 
 Быстрый старт
 -------------
-1. Разворачиваем демон (находится в geowidd/)
-    - правим geowid_daemon_settings.xml:
+0. собрать проект ant'ом с помощью geowid.xml. Потребуется Ant-Contrib (инструкции по установке
+    на http://ant-contrib.sourceforge.net/)
+1. Разворачиваем демон (артефакт находится в geowidd/)
+    - правим etc/geowid_daemon_settings.xml:
         log-file-catalog    указать каталог расположения файла лога
         log-file-pattern    указать регулярку, соответствующую имени файла лога
-        connection-port     указать слушающий порт для подключения сервлета
+        server-host         указать хост, на котором будет крутиться сервер
+        server-port         указать порт для подключения к серверу
     - правим geowidd.sh:
-        USER        указать пользователя, под правами которого будет работать демон
-        JSVC        указать расположение бинарника jsvc
-        JAVA        указать home-директорию java'ы
+        USER        указать пользователя, с правами которого будет работать демон
+        JSVC        указать расположение бинарника jsvc (если отличается от стандартного)
+        JAVA        указать home-директорию java'ы (если не установлена переменная среды JAVA_HOME)
     - запускаем:
+        (возможно понадобится chmod +x ./geowidd.sh)
         ./geowidd.sh start
+      логи бережно складируются в logs/
 
-2. Разворачиваем серверную часть (находится в geowidsrv/)
+2. Разворачиваем серверную часть (артефакт находится в geowidsrv/)
     - помещаем root.war в $JETTY_HOME/webapps/
-    - открываем vim'ом root.war/WEB-INF/web.xml
-        log-stream-host     хост расположения демона
-        log-stream-port     порт демона
-    - :wq
-    - java -jar start.jar (в $JETTY_HOME)
-3. Для настройки параметров отображения точек на карте внизу справа есть небольшая кнопка
+    - cd $JETTY_HOME
+      java -jar start.jar
+
+mTroubleshooting
+----------------
+! Ничего не работает!
++ Проверьте логи. Обычно проблемы связаны с неверным конфигурированием демона, ненастроенным файерволом и т.п.
+  Следует отметить, что при демон автоматически перезапускается при фатальных ошибках, однако этого не происходит
+  при неверном конфигурировании.
+
+! Где искать логи сервера?
++ Правильно сконфигурировали $JETTY_HOME/etc/jetty-logging.xml? Документация jetty поможет. После этого запустите
+  jetty с параметром etc/jetty-logging.xml, например
+        java -jar start.jar etc/jetty-logging.xml
+
+! Всё неожиданно отвалилось!
++ Что ж, это beta. Для начала перезапустите демон
+        ./geowidd.sh restart
+  Не получается? Сделайте ручками. Возможно поможет PID демона из resources/geowidd.pid и kill -9
+  Не помогло? Перезапустите сервлет
+  Не помогло? Перезапустите jetty
+  Не помогло? Логи в багрепорт
+
+mFAQ
+----
+? А почему карта криво отображается/тормозит/повесила мой браузер/повесила мою систему<strike>/сожгла мой CPU</strike>?
+! Потому что активно использует динамическую SVG. Соответственно, может некорректно отображаться в IE ниже 9, например.
+  Автор знает об этом. Скоро сделаю не так красиво, зато без тормозов.
+
+? Где взять ключи безопасности?
+! Утилита utils/rsakeygen.jar генерирует пару RSA-ключей. Воспользуйтесь ей.
