--- a/README
+++ b/README
@@ -1,8 +1,9 @@
-                             === Интерактивная web-карта ===
-         отображения доступа пользователей к магазинам Ecwid в реальном времени
+                         === Интерактивная web-карта ===
+     отображения доступа пользователей к магазинам Ecwid в реальном времени
 
 Состоит из:
-1. java-демона (вычитывает обновления из лога, парсит их и резолвит ip-адреса в геокоординаты)
+1. java-демона (вычитывает обновления из лога, парсит их и резолвит ip-адреса в
+   геокоординаты)
 2. сервлета для jetty7+ (работает на long-polling посредством API jetty)
 3. веб-морды
 
@@ -13,8 +14,8 @@
 
 Быстрый старт
 -------------
-0. собрать проект ant'ом с помощью geowid.xml. Потребуется Ant-Contrib (инструкции по установке
-    на http://ant-contrib.sourceforge.net/)
+0. собрать проект ant'ом с помощью geowid.xml. Потребуется Ant-Contrib
+   (инструкции по установке на http://ant-contrib.sourceforge.net/)
 1. Разворачиваем демон (артефакт находится в geowidd/)
     - правим etc/geowid_daemon_settings.xml:
         log-file-catalog    указать каталог расположения файла лога
@@ -23,8 +24,10 @@
         server-port         указать порт для подключения к серверу
     - правим geowidd.sh:
         USER        указать пользователя, с правами которого будет работать демон
-        JSVC        указать расположение бинарника jsvc (если отличается от стандартного)
-        JAVA        указать home-директорию java'ы (если не установлена переменная среды JAVA_HOME)
+        JSVC        указать расположение бинарника jsvc
+                    (если отличается от стандартного)
+        JAVA        указать home-директорию java'ы
+                    (если не установлена переменная среды JAVA_HOME)
     - запускаем:
         (возможно понадобится chmod +x ./geowidd.sh)
         ./geowidd.sh start
@@ -38,27 +41,32 @@
 mTroubleshooting
 ----------------
 ! Ничего не работает!
-+ Проверьте логи. Обычно проблемы связаны с неверным конфигурированием демона, ненастроенным файерволом и т.п.
-  Следует отметить, что при демон автоматически перезапускается при фатальных ошибках, однако этого не происходит
++ Проверьте логи. Обычно проблемы связаны с неверным конфигурированием демона,
+  ненастроенным файерволом и т.п. Следует отметить, что демон автоматически
+  перезапускается при фатальных ошибках, однако этого не происходит
   при неверном конфигурировании.
 
 ! Где искать логи сервера?
-+ Правильно сконфигурировали $JETTY_HOME/etc/jetty-logging.xml? Документация jetty поможет. После этого запустите
-  jetty с параметром etc/jetty-logging.xml, например
++ Правильно сконфигурировали $JETTY_HOME/etc/jetty-logging.xml?
+  Документация jetty поможет. После этого запустите jetty с параметром
+  etc/jetty-logging.xml, например
         java -jar start.jar etc/jetty-logging.xml
 
 ! Всё неожиданно отвалилось!
 + Что ж, это beta. Для начала перезапустите демон
         ./geowidd.sh restart
-  Не получается? Сделайте ручками. Возможно поможет PID демона из resources/geowidd.pid и kill -9
+  Не получается? Сделайте ручками. Возможно поможет PID демона из
+  resources/geowidd.pid и kill -9
   Не помогло? Перезапустите сервлет
   Не помогло? Перезапустите jetty
   Не помогло? Логи в багрепорт
 
 mFAQ
 ----
-? А почему карта криво отображается/тормозит/повесила мой браузер/повесила мою систему<strike>/сожгла мой CPU</strike>?
-! Потому что активно использует динамическую SVG. Соответственно, может некорректно отображаться в IE ниже 9, например.
+? А почему карта криво отображается/тормозит/повесила мой браузер/повесила
+  мою систему<strike>/сожгла мой CPU</strike>?
+! Потому что активно использует динамическую SVG. Соответственно, может
+  некорректно отображаться в IE ниже 9, например.
   Автор знает об этом. Скоро сделаю не так красиво, зато без тормозов.
 
 ? Где взять ключи безопасности?
