--- a/README
+++ b/README
@@ -10,7 +10,6 @@
 Для работы необходимо:
 1. oracle java1.6+
 2. jetty7+
-3. jsvc1.0+ для демона
 
 Быстрый старт
 -------------
@@ -20,18 +19,18 @@
     - правим etc/geowid_daemon_settings.xml:
         log-file-catalog    указать каталог расположения файла лога
         log-file-pattern    указать регулярку, соответствующую имени файла лога
-        server-host         указать хост, на котором будет крутиться сервер
-        server-port         указать порт для подключения к серверу
-    - правим geowidd.sh:
-        USER        указать пользователя, с правами которого будет работать демон
-        JSVC        указать расположение бинарника jsvc
-                    (если отличается от стандартного)
-        JAVA        указать home-директорию java'ы
-                    (если не установлена переменная среды JAVA_HOME)
+        ip-resolver-db      указать путь к файлу базы данных Maxmind
+                            для резолва ip
+        server-url          указать url, по которому демон будет POST'ить
+                            новые данные из лога в формате JSON
+        events              описываем отображаемые события лога (их типы и
+                            регулярки с выделением ip как group #1)
+    - правим geowidd.sh в соответствии с требованиями
+      (подробности в комментариях скрипта)
     - запускаем:
         (возможно понадобится chmod +x ./geowidd.sh)
         ./geowidd.sh start
-      логи бережно складируются в logs/
+      логи бережно складируются по соседству
 
 2. Разворачиваем серверную часть (артефакт находится в geowidsrv/)
     - помещаем root.war в $JETTY_HOME/webapps/
@@ -42,9 +41,7 @@ mTroubleshooting
 ----------------
 ! Ничего не работает!
 + Проверьте логи. Обычно проблемы связаны с неверным конфигурированием демона,
-  ненастроенным файерволом и т.п. Следует отметить, что демон автоматически
-  перезапускается при фатальных ошибках, однако этого не происходит
-  при неверном конфигурировании.
+  ненастроенным файерволом и т.п.
 
 ! Где искать логи сервера?
 + Правильно сконфигурировали $JETTY_HOME/etc/jetty-logging.xml?
@@ -52,22 +49,12 @@ mTroubleshooting
   etc/jetty-logging.xml, например
         java -jar start.jar etc/jetty-logging.xml
 
-! Всё неожиданно отвалилось!
-+ Что ж, это beta. Для начала перезапустите демон
-        ./geowidd.sh restart
-  Не получается? Сделайте ручками. Возможно поможет PID демона из
-  resources/geowidd.pid и kill -9
-  Не помогло? Перезапустите сервлет
-  Не помогло? Перезапустите jetty
-  Не помогло? Логи в багрепорт
-
 mFAQ
 ----
 ? А почему карта криво отображается/тормозит/повесила мой браузер/повесила
   мою систему<strike>/сожгла мой CPU</strike>?
 ! Потому что активно использует динамическую SVG. Соответственно, может
   некорректно отображаться в IE ниже 9, например.
-  Автор знает об этом. Скоро сделаю не так красиво, зато без тормозов.
-
-? Где взять ключи безопасности?
-! Утилита utils/rsakeygen.jar генерирует пару RSA-ключей. Воспользуйтесь ей.
+  Автор знает об этом. Есть мысль переделать с использованием
+  html5 canvas-анимации, что значительно снизит нагрузку на cpu,
+  однако будет нещадно кушать память.
